gcc-4_1-branch/gcc/testsuite/g++.dg/parse/goto1.C
// PR 24452
// { dg-do compile }

void foo()
{
    x;		// { dg-error "not declared" }
    L: goto L;
}
